required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Fixed query maps under the new single pass query process (#3069)

- WFS Client seg fault (OGR layer not opened) (#3136)

- Reduce use of sqrt() calls when determining distances (#3134)

- support axis ordering for WFS 1.1 (#2899)

- const changes to avoid warnings with msLoadProjectionString()

- mapgd.c: removed unused drawVectorSymbolGD() function.

Version 5.6.0-beta1 (2009-09-23):
---------------------------------

- WMS 1.3.0 expects a CRS parameter instead of SRS (#2979)

- Allow users to set wms getmap and getlegendgraphic image format list (#455)

- Fixed MapScript shapeObj->toWkt() segfaults (#2763)

- add vertical bar charts to dynamic charting (#3128)

- Get the intersection points and labels #3101

- Fixed shp2img not to cause a crash when the map couldn't be loaded

- Fix problem with overflowing shape->index for (most) query modes (#2850)

- Useful error message when PK is missing and data is subselect (#3124)

- Add WMS root Layer metadata support (#3121)

- Fixed build problem of PHP/Mapscript when php is compiled with gd as
  a shared extension (#3117)

- Improve safety of srcx/y checks in nearest neighbour raster resampler (#3120)

- Added support for 4d geometry types and oci bind variables for Oracle (#3107)

- Implement SECTION support for the WCS 1.1 GetCapabilities request (#3105)

- Fixed WCS processing when both crs and response_crs are specified (#3083)

- Fixed msFreeMap causing memory corruption in msFreeOutputFormat (#3113)

- Fix WMC XML output when Dimension is used (#3110)

- Enable LOAD_WHOLE_IMAGE processing option by default when rendering