@@ -616,6 +616,8 @@ static msOracleSpatialHandler *msOCISetHandlers( char *username, char *password,
 /* disconnect from database */
 static void msOCICloseHandlers( msOracleSpatialHandler *hand )
 {
+    if (hand->envhp != NULL && hand->errhp != NULL && hand->svchp != NULL)
+        OCICacheFree (hand->envhp,hand->errhp,hand->svchp);
     if (hand->svchp != NULL)
         OCILogoff( hand->svchp, hand->errhp );
     if (hand->errhp != NULL)
@@ -1852,11 +1854,6 @@ int msOracleSpatialLayerClose( layerObj *layer )
           msDebug("msOracleSpatialLayerClose. Cleaning layerinfo handlers.\n");
         msOCICloseDataHandlers( layerinfo->oradatahandlers );
         layerinfo->oradatahandlers = NULL;
-
-        /* Release Oracle Cache */
-        if (layer->debug)
-          msDebug("msOracleSpatialLayerClose. Cleaning Oracle Cache.\n");
-        OCICacheFree (layerinfo->orahandlers->envhp,layerinfo->orahandlers->errhp,layerinfo->orahandlers->svchp);
 
         /* Release Mapserver Pool */
         if (layer->debug)
